--- a/Ingrassia.html
+++ b/Ingrassia.html
@@ -20,14 +20,14 @@ minutes=parseInt(minutes,10);
 
 if(cn(hours)&& cn(minutes)){
 	if(minutes==0){
-		mess="<br><b class='grasvert'>" + hours;
+		mess=hours;
 		if(hours==1){
 			mess += " ora equivale a ";}
 		else
 			mess += " ore equivalgono a ";}
 
 	else if(hours==0){
-		mess="<br><b class='grasvert'>" + minutes;
+		mess=minutes;
 		if(minutes==1){
 			mess += " minuto equivale a ";}
 		else
@@ -35,7 +35,7 @@ if(cn(hours)&& cn(minutes)){
 		
 		else{
 			
-			mess="<br><b class='grasvert'>" + hours;
+			mess=hours;
 			if(hours==1)
 				mess += " ora e ";
 			else
@@ -54,15 +54,15 @@ if(cn(hours)&& cn(minutes)){
 	   console.log(minutes);
 	   
 	   if(MCD(minutes,Ciccio)==1){
-		mess+=minutes+"/"+Ciccio + " di Esorciccio</b>";}
+		mess+=minutes+"/"+Ciccio + " di Esorciccio.";}
 	   else if(minutes%Ciccio==0){
 		   intCiccio = minutes/Ciccio;
 		   if((intCiccio)==1){
-		   mess+= intCiccio + " Esorciccio.</b>";}
+		   mess+= intCiccio + " Esorciccio.";}
 			else{
-			mess+= intCiccio + " Esorcicci.</b>";}}
+			mess+= intCiccio + " Esorcicci.";}}
 	   else{
-		  mess+=(minutes/MCD(minutes,Ciccio)) + "/" + Ciccio/MCD(minutes,Ciccio)+" di Esorciccio</b>";}
+		  mess+=(minutes/MCD(minutes,Ciccio)) + "/" + Ciccio/MCD(minutes,Ciccio)+" di Esorciccio.";}
 }
 
 console.log(mess);
@@ -93,7 +93,7 @@ container.innerHTML = mess;}
 		<link rel="stylesheet" href="cssfile.css">
 	</head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<body style="background-image: url('locandina.jpg');>
+	<body style="background-image: url('locandina.jpg'); repeat 0 0">
 	<!-- <div class="jumbotron jumbotron-fluid" > -->
         <div class="container" style="background-color:#ffffff;margin-top:2%;"> 
 		<p align="center"><font size="5"><strong><u><br>
