--- a/Ingrassia.html
+++ b/Ingrassia.html
@@ -93,9 +93,10 @@ container.innerHTML = mess;}
 		<link rel="stylesheet" href="cssfile.css">
 	</head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<body style="background-image: url('locandina.jpg'); repeat 0 0">
+	<body>
 	<!-- <div class="jumbotron jumbotron-fluid" > -->
-        <div class="container" style="background-color:#ffffff;margin-top:2%;"> 
+		<!-- style="background-image: url('locandina.jpg'); repeat 0 0" -->
+        <div class="container"> 
 		<p align="center"><font size="5"><strong><u><br>
 			CONVERSIONE TEMPO-ESORCICCIO
 		</u></strong></font></p>
@@ -106,8 +107,8 @@ container.innerHTML = mess;}
 		<center><p>Tempo da convertire: <input type="number" name="hours" id="hours" min=0 value=0> ore, 
 				<input type="number" name="min" id="min" min=0 value=0> minuti.</p>
 		<button type="button" onclick="ciccio()">Procedi</button></form>
-		
-		<div id="containerTEXT" class='grasvert'></div>
+		<br><br>
+		<div id="containerTEXT" class='grasvert' style="padding: 50px 0; border: 20px yellow;"></div>
 		<br></center>
 		</div>
 	</body>
