--- a/Ingrassia.html
+++ b/Ingrassia.html
@@ -104,11 +104,11 @@ container.innerHTML = mess;}
 			"L'unit&#224 di tempo preferita di Synergo"
 		</strong></font></p>
 		<h4><form method='post' action='Ingrassia.html'>
-		<center><p>Tempo da convertire: <input type="number" name="hours" id="hours" min=0 value=0> ore, 
-				<input type="number" name="min" id="min" min=0 value=0> minuti.</p>
+		<center><p>Tempo da convertire: <input type="number" name="hours" id="hours" min=0 value=0 height="24"> ore, 
+				<input type="number" name="min" id="min" min=0 value=0 height="24"> minuti.</p>
 		<button type="button" onclick="ciccio()">Procedi</button></form>
-		<br><br>
-		<div id="containerTEXT" class='grasvert' style="padding: 50px 0; border: 20px yellow;"></div>
+		<br>
+		<div id="containerTEXT" class='grasvert' style="padding: 13px 0;"></div>
 		<br></center>
 		</div>
 	</body>
